--- a/aboutEmotions.html
+++ b/aboutEmotions.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <script type="module" crossorigin src="/wavemocards/assets/main-4fdada67.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-9e4da295.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-4f45402c.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-304f2ee8.css">
   </head>
   <body>
     <header class="header h-logined fixed-top">
@@ -77,11 +77,11 @@
     </div>
 </header>
 
-    <div class="aboutEmotions pt-72" id="top">
-        <div class="container py-16">
+    <div class="aboutEmotions pt-112" id="top">
+        <div class="container pb-16">
             <!-- 標題 -->
-            <div class="titleBar d-flex justify-content-between align-items-center">
-                <h2>認識情緒</h2>
+            <div class="mb-16 pb-8 border-2 border-bottom border-main-tint02 d-flex justify-content-between align-items-end">
+                <h2 class="fs-3">認識情緒</h2>
                 <div class="nav-btn d-flex justify-content-end">
                     <div class="btn-disable">關於情緒</div>
                     <a class="ms-16 btn btn-outline-main c-btn" href="emoCardsClassified.html">情緒卡</a>
@@ -91,7 +91,9 @@
             <div class="introduction py-16">
                 <div class="mb-56">
                     <h2 class="mb-12">什麼是情緒？</h2>
-                    <p id="whatIsEmotion"></p>
+                    <p id="whatIsEmotion">
+                        情緒英文是emotion，代表流動在我們身體的能量。當我們受到刺激，引發出內心感受、身體反應、想法與行動，就是情緒。例如某人踏進後巷時，遇到一隻看來很兇惡的狗（刺激），覺得十分害怕，擔心自己被咬傷（內心感受和想法），不禁心跳加速和顫抖（身體反應），最終決定急步繞路離開（行動）。
+                    </p>
                 </div>
                 <div class="mb-56">
                     <h2 class="mb-12">6大基本情緒</h2>
@@ -121,15 +123,21 @@
                             <span>驚訝</span>
                         </div>
                     </div>
-                    <p id="sixBasicEmotions"></p>
+                    <p id="sixBasicEmotions">
+                        博物學家達爾文提及過人類有六種基本情緒，包括快樂（happiness）、悲傷（sadness）、恐懼（fear）、厭惡（disgust）、憤怒（anger）和驚訝（surprise），屬於有助人類提高生存機會的本能情緒。其他複雜情緒如興奮、委屈、自卑、妒忌、內疚、寂寞等，則是由基本情緒混合衍生而成，並且經過學習與社會化之後產生。
+                    </p>
                 </div>
                 <div class="mb-56">
                     <h2 class="mb-12">情緒無分好與壞</h2>
-                    <p id="goodOrBad"></p>
+                    <p id="goodOrBad">
+                        一般人習慣將情緒分為正負面，覺得快樂屬於正面情緒，悲傷、憤怒、恐懼則對人有害。其實情緒無分好與壞，每一種情緒都有其獨特意義。例如對於陌生環境感到恐懼不安，反映著對安全感的渴求，提醒我們遠離危險。悲傷時脆弱流淚，則可吸引關顧與扶持，促進人際聯繫。
+                    </p>
                 </div>
                 <div class="mb-56">
                     <h2 class="mb-12">情緒的健康之道</h2>
-                    <p id="healthyEmotion"></p>
+                    <p id="healthyEmotion">
+                        假如對情緒存在偏見，否定和壓抑自己的真正感覺，明明傷心卻扮開心，明明生氣卻默默忍受，很容易令身心健康出現問題。所謂情緒健康，不代表要時刻保持愉快心情，而是要有能力覺察自己的不同情緒，了解內心需要，並以健康恰當的方式去表達和調適，讓心靈回復平靜。
+                    </p>
                 </div>
                 <div class="text-end mb-64">
                     <a class="quote" href="https://wmc.hkfyg.org.hk/emo1" target="_blank">
@@ -141,11 +149,10 @@
     </main>
     
     <!-- 浮動按鈕 -->
-<div class="me-12 mb-12" style="width: 60px; position: fixed; right: 0; bottom: 0; z-index: 1030;">
-    <a href="#top" type="button" class="btn btn-main-tint01 rounded-circle shadow d-flex flex-column justify-content-center align-items-center"
-    style="width: 60px; height: 60px;">
-            <img src="/wavemocards/assets/backToTop-1ea21c73.svg" alt="top">
-            <span class="text-white fs-10 fw-bold">TOP</span>
+<div class="me-12 mb-12 floatButton">
+    <a href="#top" type="button" class="btn btn-main-tint01 rounded-circle shadow d-flex flex-column justify-content-center align-items-center">
+        <img class="d-none d-md-block" src="/wavemocards/assets/backToTop-1ea21c73.svg" alt="top">
+        <span class="text-white fs-9 fs-md-10 fw-bold">TOP</span>
     </a>
 </div>
     <footer class="footer py-48">
@@ -223,7 +230,7 @@
 
 <!-- axios -->
 <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>    <!-- get data -->
-    <script>
+    <!-- <script>
         let whatIsEmotion = document.querySelector('#whatIsEmotion');
         let sixBasicEmotions = document.querySelector('#sixBasicEmotions');
         let goodOrBad = document.querySelector('#goodOrBad');
@@ -236,6 +243,6 @@
             goodOrBad.textContent = response.data.goodOrBad;
             healthyEmotion.textContent = response.data.healthyEmotion;
         })
-    </script>
+    </script> -->
   </body>
 </html>
