--- a/account.html
+++ b/account.html
@@ -10,8 +10,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
         <!-- Bootstrap css -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-      <script type="module" crossorigin src="/wavemocards/assets/main-4fdada67.js"></script>
-      <link rel="stylesheet" href="/wavemocards/assets/main-9e4da295.css">
+      <script type="module" crossorigin src="/wavemocards/assets/main-4f45402c.js"></script>
+      <link rel="stylesheet" href="/wavemocards/assets/main-304f2ee8.css">
     </head>
     <body>
         <header class="header h-logined fixed-top">
@@ -80,7 +80,7 @@
         <main>
             <div class="container py-16 mb-48 pt-72" id="top">
                 <!-- title bar -->
-                <div class="mb-36 pt-32 pb-8 d-flex justify-content-between align-items-center border-2 border-bottom border-main-tint02">
+                <div class="mb-36 pt-32 pb-8 d-flex justify-content-between align-items-end border-2 border-bottom border-main-tint02">
                     <h2 class="fs-3">我的帳戶</h2>
                     <form action="" method="">
                     <div class="nav-btn d-flex justify-content-end">
@@ -150,11 +150,10 @@
         </main>
         
         <!-- 浮動按鈕 -->
-<div class="me-12 mb-12" style="width: 60px; position: fixed; right: 0; bottom: 0; z-index: 1030;">
-    <a href="#top" type="button" class="btn btn-main-tint01 rounded-circle shadow d-flex flex-column justify-content-center align-items-center"
-    style="width: 60px; height: 60px;">
-            <img src="/wavemocards/assets/backToTop-1ea21c73.svg" alt="top">
-            <span class="text-white fs-10 fw-bold">TOP</span>
+<div class="me-12 mb-12 floatButton">
+    <a href="#top" type="button" class="btn btn-main-tint01 rounded-circle shadow d-flex flex-column justify-content-center align-items-center">
+        <img class="d-none d-md-block" src="/wavemocards/assets/backToTop-1ea21c73.svg" alt="top">
+        <span class="text-white fs-9 fs-md-10 fw-bold">TOP</span>
     </a>
 </div>        
         <footer class="footer py-48">
