--- a/emoCardsClassifiedExpand.html
+++ b/emoCardsClassifiedExpand.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <script type="module" crossorigin src="/wavemocards/assets/main-4fdada67.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-9e4da295.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-4f45402c.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-304f2ee8.css">
   </head>
   <body>
     <header class="header h-logined fixed-top">
@@ -77,15 +77,18 @@
 </header>
 
     <main>
-      <div class="container py-16 pt-72" id="top">
-        <div class="titleBar d-flex justify-content-between align-items-center">
-            <h2>情緒卡</h2>
+      <div class="container py-16 pt-112" id="top">
+        <!-- 標題 -->
+          <div class="mb-16 pb-8 border-2 border-bottom border-main-tint02 d-flex justify-content-between align-items-end">
+            <h2 class="fs-3">情緒卡</h2>
             <div class="nav-btn d-flex justify-content-end">
-                <a class="btn btn-outline-main c-btn" href="emoCardsClassified.html">分類</a>
+                <a class="btn btn-outline-main c-btn" href="emoCardsClassified.html">收合</a>
                 <div class="ms-16 btn-disable">展開</div>
             </div>
         </div>
-  
+        <p class="mb-32 text-gray-550">
+          🔎 請點擊情緒卡，可以展開觀看詳細的情緒資訊。
+        </p>
         <!-- 快樂類 -->
         <div class="mb-24 d-flex flex-nowrap">
           <a class="emoCardsHead link-gray-900 emoCardHeadHappy" href="emoCardsHappy.html">
@@ -552,11 +555,10 @@
     </main>
 
     <!-- 浮動按鈕 -->
-<div class="me-12 mb-12" style="width: 60px; position: fixed; right: 0; bottom: 0; z-index: 1030;">
-    <a href="#top" type="button" class="btn btn-main-tint01 rounded-circle shadow d-flex flex-column justify-content-center align-items-center"
-    style="width: 60px; height: 60px;">
-            <img src="/wavemocards/assets/backToTop-1ea21c73.svg" alt="top">
-            <span class="text-white fs-10 fw-bold">TOP</span>
+<div class="me-12 mb-12 floatButton">
+    <a href="#top" type="button" class="btn btn-main-tint01 rounded-circle shadow d-flex flex-column justify-content-center align-items-center">
+        <img class="d-none d-md-block" src="/wavemocards/assets/backToTop-1ea21c73.svg" alt="top">
+        <span class="text-white fs-9 fs-md-10 fw-bold">TOP</span>
     </a>
 </div>
     <!-- modalEmoCards -->
