--- a/findEmoStrength1st.html
+++ b/findEmoStrength1st.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <script type="module" crossorigin src="/wavemocards/assets/main-4fdada67.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-9e4da295.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-4f45402c.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-304f2ee8.css">
   </head>
   <body>
     <header class="header h-logined fixed-top">
@@ -112,7 +112,7 @@
             <div class="titleBar d-lg-flex justify-content-between align-items-center">
                 <h2>我的情緒強度｜第一次</h2>
                 <div class="nav-btn d-lg-flex justify-content-end">
-                    <a class="btn btn-outline-main c-btn" href="myEmoCardsHolder.html">上一步</a>
+                    <a class="btn btn-outline-main c-btn d-flex justify-content-center align-items-center" href="myEmoCardsHolder.html">上一步</a>
                     <a class="ms-16 btn btn-main c-btn d-flex justify-content-center align-items-center" href="findEmoBackground.html"><span class="ms-4">下一步</span></a>
                 </div>
             </div>
@@ -263,11 +263,10 @@
     </main>
 
     <!-- 浮動按鈕 -->
-<div class="me-12 mb-12" style="width: 60px; position: fixed; right: 0; bottom: 0; z-index: 1030;">
-    <a href="#top" type="button" class="btn btn-main-tint01 rounded-circle shadow d-flex flex-column justify-content-center align-items-center"
-    style="width: 60px; height: 60px;">
-            <img src="/wavemocards/assets/backToTop-1ea21c73.svg" alt="top">
-            <span class="text-white fs-10 fw-bold">TOP</span>
+<div class="me-12 mb-12 floatButton">
+    <a href="#top" type="button" class="btn btn-main-tint01 rounded-circle shadow d-flex flex-column justify-content-center align-items-center">
+        <img class="d-none d-md-block" src="/wavemocards/assets/backToTop-1ea21c73.svg" alt="top">
+        <span class="text-white fs-9 fs-md-10 fw-bold">TOP</span>
     </a>
 </div>    
     <footer class="footer py-48">
