--- a/signUp.html
+++ b/signUp.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <script type="module" crossorigin src="/wavemocards/assets/main-4fdada67.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-9e4da295.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-4f45402c.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-304f2ee8.css">
   </head>
   <body>
     <header class="header sticky-top">
@@ -89,7 +89,7 @@
                             密碼
                             <span class="text-pink-tint02 fs-9">*必填</span>
                         </label>
-                        <input type="password" class="form-control mb-8 rounded-pill px-20" id="pwd" required aria-describedby="passwordHelp" placeholder="********" required>
+                        <input type="password" class="form-control rounded-pill px-20" id="pwd" required aria-describedby="passwordHelp" placeholder="********" required>
                         <!-- 密碼驗證 msg -->
                         <div class="mt-4 ms-24 fs-9" id="pwdCmt"></div>
                         <button class="ms-24 p-0 fs-9 link-gray-550 bg-white border-0" type="button" data-bs-toggle="collapse" data-bs-target="#collapsePwdRules" aria-expanded="false" aria-controls="collapsePwdRules">
@@ -120,7 +120,7 @@
                             <span class="text-pink-tint02 fs-9">*必填</span>
                         </label>
                         <input type="password" class="form-control rounded-pill px-20" id="pwd2" placeholder="請再次輸入您所欲設定的密碼" required>
-                        <div class="mt-4 ms-24" id="pwd2Cmt"></div>
+                        <div class="mt-4 ms-24 fs-9" id="pwd2Cmt"></div>
                     </div>
                     <div class="mb-20">
                         <label for="account" class="form-label  d-flex justify-content-between">
@@ -349,7 +349,7 @@
         function pwdVerify(){
             if(pwd.value != "" && pwd2.value != "" && pwd.value == pwd2.value) {
                 pwd2Cmt.textContent = "密碼相符";
-                pwd2Cmt.style.color = "green";
+                pwd2Cmt.style.color = "#3C9DAE";
             } else if(pwd.value != "" && pwd2.value != "" && pwd.value != pwd2.value) {
                 pwd2Cmt.textContent = "密碼有誤，請輸入相同的密碼";
                 pwd2Cmt.style.color = "#C37979";
@@ -362,9 +362,12 @@
         aHeaders.forEach(function(a, index){
             a.addEventListener("click", function(){
                 if (email.value!="" || pwd.value!="" || pwd2.value!="" || account.value!="" || lastName.value!="" || firstName.value!="") {
+                    event.preventDefault();
                     let confirmResult = confirm("離開後此頁面資料將不會被保存。\r您確定要離開嗎？");
                     if (confirmResult) {
                         location.href=a.href;
+                    } else {
+                        return
                     }
                 }
             })
