Added RWD at pages about emo story

--- a/pages/emoCardsAnger.html
+++ b/pages/emoCardsAnger.html
@@ -16,7 +16,7 @@
 
     <main>
       <div class="container py-16 pt-112" id="top">
-        <div class="mb-16 pb-8 border-2 border-bottom border-main-tint02 d-flex justify-content-between align-items-end">
+        <div class="mb-16 pb-8 border-2 border-bottom border-main-tint02 d-flex justify-content-between align-items-center">
           <h2 class="fs-3">生氣</h2>
           <div class="nav-btn d-flex justify-content-end">
               <a class="btn btn-outline-main c-btn" href="emoCardsClassified.html">返回</a>
