--- a/pages/emoCardsClassified.html
+++ b/pages/emoCardsClassified.html
@@ -16,7 +16,7 @@
     <main>
       <div class="container py-16 pt-112" id="top">
         <!-- 標題 -->
-          <div class="mb-16 pb-8 border-2 border-bottom border-main-tint02 d-flex justify-content-between align-items-end">
+          <div class="mb-16 pb-8 border-2 border-bottom border-main-tint02 d-flex justify-content-between align-items-center">
             <h2 class="fs-3">認識情緒</h2>
           <div class="nav-btn d-flex justify-content-end">
             <a class="btn btn-outline-main c-btn" href="aboutEmotions.html">關於情緒</a>
@@ -45,7 +45,7 @@
   
         <!-- 情緒卡 -->
         <div id="emoCardsTitle" style="height: 88px;"></div>
-        <div class="mb-16 pb-8 border-2 border-bottom border-main-tint02 d-flex justify-content-between align-items-end">
+        <div class="mb-16 pb-8 border-2 border-bottom border-main-tint02 d-flex justify-content-between align-items-center">
           <h2 class="fs-3">情緒卡</h2>
           <div class="nav-btn d-flex justify-content-end">
             <div class="btn-disable">收合</div>
