--- a/pages/aboutEmotions.html
+++ b/pages/aboutEmotions.html
@@ -17,7 +17,7 @@
     <div class="aboutEmotions pt-112" id="top">
         <div class="container pb-16">
             <!-- 標題 -->
-            <div class="mb-16 pb-8 border-2 border-bottom border-main-tint02 d-flex justify-content-between align-items-end">
+            <div class="mb-16 pb-8 border-2 border-bottom border-main-tint02 d-flex justify-content-between align-items-center">
                 <h2 class="fs-3">認識情緒</h2>
                 <div class="nav-btn d-flex justify-content-end">
                     <div class="btn-disable">關於情緒</div>
