--- a/pages/account.html
+++ b/pages/account.html
@@ -17,7 +17,7 @@
         <main>
             <div class="container py-16 mb-48 pt-72" id="top">
                 <!-- title bar -->
-                <div class="mb-36 pt-32 pb-8 d-flex justify-content-between align-items-end border-2 border-bottom border-main-tint02">
+                <div class="mb-36 pt-32 pb-8 d-flex justify-content-between align-items-center border-2 border-bottom border-main-tint02">
                     <h2 class="fs-3">我的帳戶</h2>
                     <form action="" method="">
                     <div class="nav-btn d-flex justify-content-end">
