--- a/pages/findEmoAction.html
+++ b/pages/findEmoAction.html
@@ -12,128 +12,149 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   </head>
   <body>
+    <div class="" id="top"></div>
     <%- include('./layout/headerLoggedInNoFixed'); -%>
-
     <main>
-        <div class="container py-16 pt-72 " id="top">
-            <!-- process bar -->
-            <div class="mt-24 d-flex justify-content-end">
-                <div class="progressBar mt-16 mb-8 px-12">
-                    <div class="position-relative m-4">
-                        <div class="progress" style="height: 2px;">
-                            <div class="progress-bar bg-main-tint01" role="progressbar" style="width: 60%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <div class="p-num position-absolute top-0 start-0 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
-                            <span class="d-block">1</span>
-                        </div>
-                        <div class="p-num position-absolute top-0 start-20 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
-                            <span class="d-block">2</span>
-                        </div>
-                        <div class="p-num position-absolute top-0 start-40 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
-                            <span class="d-block">3</span>
-                        </div>
-                        <div class="p-num position-absolute top-0 start-60 translate-middle btn btn-sm btn-outline-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
-                            <span class="d-block">4</span>
-                        </div>
-                        <div class="p-num position-absolute top-0 start-80 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center">
-                            <span class="d-block">5</span>
-                        </div>
-                        <div class="p-num position-absolute top-0 start-100 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center">
-                            <span class="d-block">6</span>
+        <div class="sticky-top pb-8 bg-white">
+            <div class="container">
+                <!-- process bar -->
+                <div class="d-flex mb-20 pt-20 justify-content-center justify-content-sm-end">
+                    <div class="progressBar mb-8 px-12">
+                        <div class="position-relative m-4">
+                            <div class="progress bg-gray-300" style="height: 2px;">
+                                <div class="progress-bar bg-main-tint01" role="progressbar" style="width: 60%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                            <div class="p-num position-absolute top-0 start-0 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
+                                <span class="d-block">1</span>
+                            </div>
+                            <div class="p-num position-absolute top-0 start-20 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
+                                <span class="d-block">2</span>
+                            </div>
+                            <div class="p-num position-absolute top-0 start-40 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
+                                <span class="d-block">3</span>
+                            </div>
+                            <div class="p-num position-absolute top-0 start-60 translate-middle btn btn-sm btn-outline-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
+                                <span class="d-block">4</span>
+                            </div>
+                            <div class="p-num position-absolute top-0 start-80 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center">
+                                <span class="d-block">5</span>
+                            </div>
+                            <div class="p-num position-absolute top-0 start-100 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center">
+                                <span class="d-block">6</span>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-
-            <!-- title bar -->
-            <div class="titleBar d-lg-flex justify-content-between align-items-center">
-                <h2>我的情緒故事｜行動篇</h2>
-                <div class="nav-btn d-lg-flex justify-content-end">
-                    <a class="btn btn-outline-main c-btn" href="findEmoBackground.html">上一步</a>
-                    <a class="ms-16 btn btn-main c-btn d-flex justify-content-center align-items-center" href="findEmoStrength2nd.html"><span class="ms-4">下一步</span></a>
+    
+                <!-- title bar -->
+                <div class="pb-8 px-12 px-sm-0 border-2 border-bottom border-main-tint02 d-flex justify-content-between align-items-center">
+                    <h2 class="fs-3 d-none d-md-block">我的情緒故事｜行動篇</h2>
+                    <h2 class="fs-3 d-md-none d-flex flex-column">
+                        <span class="d-block">我的情緒故事</span>
+                        <span>行動篇</span>
+                    </h2>
+                    <div class="nav-btn d-flex justify-content-end">
+                        <a class="btn btn-outline-main c-btn text-nowrap d-flex justify-content-center align-items-center" href="findEmoBackground.html">上一步</a>
+                        <a class="ms-16 btn btn-main c-btn text-nowrap d-flex justify-content-center align-items-center" href="findEmoStrength2nd.html"><span class="ms-4">下一步</span></a>
+                    </div>
                 </div>
             </div>
+        </div>
 
-            <p class="mb-24 text-gray-550 fs-7">
-                謝謝親愛的ＯＯ，回想了情緒發生的背景原因。
-            </p>
+        <div class="container">
+            <ul  class="ms-4 mt-12 mb-24 px-12 px-sm-0 text-gray-550">
+                <li class="mb-4 text-gray-550 fs-7">謝謝親愛的ＯＯ，努力地回想了情緒發生的背景、原因。</li>
+                <li class="mb-4 text-gray-550 fs-7">接下來，想邀請你一起回想在情緒浪潮來臨之後⋯⋯</li>
+            </ul>
 
             <form action="#" method="post">
                 <!-- 第一題 -->
-                <div class="container mb-48">
+                <div class="container mb-md-48">
                     <div class="mb-24 row align-items-stretch">
-                        <div class="col-9 bg-main-tint03 rounded">
-                            <label for="whatIdid" class="d-block py-12">
-                                <p class="mb-4 text-main fw-500  fs-7">
-                                    接下來，想邀請ＯＯ回想在感受到「ＸＸ、ＸＸ、ＸＸ」情緒後，做了什麼事情呢？
+                        <div class="col-md-8 col-lg-9 bg-main-tint03 rounded">
+                            <label for="whatIdid" class="d-block py-12 px-4">
+                                <p class="mb-4 text-gray-550">第 1 題</p>
+                                <p class="mb-4 text-main fw-500 fs-emoForm-main">
+                                    在感受到「 ＸＸ 、 ＸＸ 、 ＸＸ 」情緒後，你有什麼反應或是做了什麼事情呢？
+                                </p>
+                                <p class="text-gray-550">
+                                    例如：在感受到心中的焦慮後，我在日記本寫下各種心中所擔憂的事情。
                                 </p>
                             </label>
                             <textarea class="w-100 mb-12 p-12 border rounded border-gray-500 text-gray-900" id="whatIdid" name="whatHappened"></textarea>
                         </div>
-                        <div class="col-3 d-flex justify-content-end align-items-center">
+                        <div class="d-none col-md-4 col-lg-3 d-md-flex justify-content-end align-items-center">
                             <img class="d-block" src="../assets/images/emoStory/lime-action.svg" alt="a man is diving" id="img">
                         </div>
                     </div>
                 </div>
                 <!-- 第二題 -->
-                <div class="container mb-48">
+                <div class="container mb-md-48">
                     <div class="mb-24 row align-items-stretch">
-                        <div class="col-9 order-2 bg-main-tint03 rounded">
-                            <label for="resault" class="d-block py-12">
-                                <p class="mb-4 text-gray-550 fs-8">謝謝你願意寫下自己的故事。</p>
-                                <p class="mb-4 text-main fw-500  fs-7">
-                                    想請親愛的ＯＯ，寫下關於上述所做的事情後，發生了什麼樣的結果？
+                        <div class="col-md-8 col-lg-9 order-2 bg-main-tint03 rounded">
+                            <label for="resault" class="d-block py-12 px-4">
+                                <p class="mb-4 text-gray-550">第 2 題</p>
+                                <p class="text-main fw-500 fs-emoForm-main">
+                                    在上述你所做的反應後，帶來了什麼樣的結果呢？
                                 </p>
                             </label>
                             <textarea class="w-100 mb-12 p-12 border rounded border-gray-500 text-gray-900" id="resault" name="whatHappened"></textarea>
                         </div>
-                        <div class="col-3 order-1 d-flex justify-content-end align-items-center">
+                        <div class="d-none col-md-4 col-lg-3 d-md-flex order-1 justify-content-end align-items-center">
                             <img class="d-block" src="../assets/images/emoStory/lime-happened.svg" alt="a man is diving" id="img">
                         </div>
                     </div>
                 </div>
                 <!-- 第三題 -->
-                <div class="container mb-48">
+                <div class="container mb-md-48">
                     <div class="mb-24 row align-items-stretch">
-                        <div class="col-9 order-1 bg-main-tint03 rounded">
-                            <label for="feeling" class="d-block py-12">
-                                <p class="mb-4 text-main fw-500  fs-7">
+                        <div class="col-md-8 col-lg-9 order-1 bg-main-tint03 rounded">
+                            <label for="feeling" class="d-block py-12 px-4">
+                                <p class="mb-4 text-gray-550">第 3 題</p>
+                                <p class="text-main fw-500 fs-emoForm-main">
                                     對於上述發生的結果，你有什麼樣的感受呢？
                                 </p>
                             </label>
                             <textarea class="w-100 mb-12 p-12 border rounded border-gray-500 text-gray-900" id="feeling" name="whatHappened"></textarea>
                         </div>
-                        <div class="col-3 order-2 d-flex justify-content-end align-items-center">
+                        <div class="d-none col-md-4 col-lg-3 d-md-flex order-2 justify-content-end align-items-center">
                             <img class="d-block" src="../assets/images/emoStory/lime-feel.svg" alt="a man is diving" id="img">
                         </div>
                     </div>
                 </div>
                 <!-- 第四～五題 -->
-                <div class="container mb-48">
+                <div class="container mb-md-48">
                     <div class="mb-24 row align-items-stretch">
-                        <div class="col-9 order-2 bg-main-tint03 rounded">
+                        <div class="col-md-8 col-lg-9 order-2 bg-main-tint03 rounded">
                             <!-- 第四題 -->
-                            <label class="d-block py-12">
-                                <p class="mb-4 text-main fw-500  fs-7">
-                                    親愛的ＯＯ，你在做了上述的事情後，你覺得你得到了好的結果？還是不好的結果呢？
+                            <label class="d-block py-12 px-4">
+                                <p class="mb-4 text-gray-550">第 4 題</p>
+                                <p class="text-main fw-500 fs-emoForm-main">
+                                    你覺得這個的結果是否是你所期待的結果呢？
                                 </p>
                             </label>
                             <div class="mb-16 d-flex align-items-center">
                                 <div>
-                                    <input type="radio" class="d-none" name="isGoodResult" id="isGoodResultYes" value="Good">
-                                    <label for="isGoodResultYes" class="form-label EmoStoryLabel me-16">
-                                        好
+                                    <input type="radio" class="d-none" name="isGoodResult" id="isGoodResultYes" value="0">
+                                    <label for="isGoodResultYes" class="form-label EmoStoryLabel me-16 fs-7">
+                                        是
                                     </label>
                                 </div>
                                 <div>
-                                    <input type="radio" class="d-none" name="isGoodResult" id="isGoodResultNo" value="Bad">
-                                    <label for="isGoodResultNo" class="form-label EmoStoryLabel">
-                                        不好
+                                    <input type="radio" class="d-none" name="isGoodResult" id="isGoodResultNo" value="1">
+                                    <label for="isGoodResultNo" class="form-label EmoStoryLabel me-16 fs-7">
+                                        否
+                                    </label>
+                                </div>
+                                <div>
+                                    <input type="radio" class="d-none" name="isGoodResult" id="isGoodResultNotSure" value="null">
+                                    <label for="isGoodResultNotSure" class="form-label EmoStoryLabel fs-7">
+                                        不清楚
                                     </label>
                                 </div>
                             </div>
                             <!-- 第五題 -->
-                            <label class="d-block py-12">
+                            <!-- <label class="d-block py-12">
                                 <p class="mb-4 text-main fw-500  fs-7">
                                     親愛的ＯＯ，現在的你對於上述所做的事情，是否有感到後悔呢？
                                 </p>
@@ -151,29 +172,36 @@
                                         否
                                     </label>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
-                        <div class="col-3 order-1 d-flex justify-content-end align-items-center">
+                        <div class="d-none col-md-4 col-lg-3 d-md-flex order-1 justify-content-end align-items-center">
                             <img class="d-block" src="../assets/images/emoStory/lime-goodOrBad.svg" alt="a man is diving" id="img">
                         </div>
                     </div>
                 </div>
                 <!-- 第六題 -->
-                <div class="container mb-24">
+                <div class="container mb-64 mb-md-24">
                     <div class="mb-24 row align-items-stretch">
-                        <div class="col-9 order-1 bg-main-tint03 rounded">
-                            <label for="betterAction" class="d-block py-12">
-                                <p class="mb-4 text-gray-550 fs-8">如果這次所做的事情/行為，所帶來的結果不太好的話。</p>
-                                <p class="mb-4 text-main fw-500  fs-7">
-                                    想邀請ＯＯ，想一想下一次發生類似的事情和感受時，
-                                </p>
-                                <p class="mb-4 text-main fw-500  fs-7">
-                                    可以做什麼樣的反應或是行為/行動，而可以得到比較好的結果呢？
-                                </p>
+                        <div class="col-md-8 col-lg-9 order-1 bg-main-tint03 rounded">
+                            <label for="betterAction" class="d-block py-12 px-4">
+                                <p class="mb-4 text-gray-550 fs-8">第 5 題</p>
+                                <!-- <p class="mb-4 text-gray-550 fs-8">如果這次所做的事情/行為，所帶來的結果不太好的話。</p> -->
+                                <ul class="ms-24" style="list-style-type:circle;">
+                                    <li>
+                                        <p class="mb-8 text-gray-550 fs-emoForm-main">
+                                            如果這次的<span class="mb-4 text-main fw-500"> 結果不如你所期待 </span>的話，你覺得<span class="mb-4 text-main fw-500"> 下次有類似的情緒時，可以怎麼做 </span>，可能可以得到你所期待的結果呢？
+                                        </p>
+                                    </li>
+                                    <li>
+                                        <p class="text-gray-600 fs-emoForm-main">
+                                            如果這次的<span class="mb-4 text-main fw-500"> 結果是你所期待 </span>的話，想邀請你寫下<span class="mb-4 text-main fw-500"> 肯定自己做得好的地方 </span>。
+                                        </p>
+                                    </li>
+                                </ul>
                             </label>
                             <textarea class="w-100 mb-12 p-12 border rounded border-gray-500 text-gray-900" id="betterAction" name="whatHappened"></textarea>
                         </div>
-                        <div class="col-3 order-2 d-flex justify-content-end align-items-center">
+                        <div class="d-none col-md-4 col-lg-3 d-md-flex order-2 justify-content-end align-items-center">
                             <img class="d-block" src="../assets/images/emoStory/lime-nextActionPlan.svg" alt="a man is diving" id="img">
                         </div>
                     </div>
@@ -181,7 +209,7 @@
             </form>
 
             <!-- 圖片引用來源 -->
-            <div class="text-end mb-64">
+            <div class="d-none d-md-block text-end mb-64">
                 <span class="text-gray-500 fs-11">
                     Illustration by <a class="link-gray-500" href="https://icons8.com/illustrations/author/iAdLsFJOKDrk" target="_blank">Tanya Krasutska</a> from <a class="link-gray-500" href="https://icons8.com/illustrations" target="_blank">Ouch!</a>
                 </span>
