--- a/pages/findEmoStrength2nd.html
+++ b/pages/findEmoStrength2nd.html
@@ -12,61 +12,71 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   </head>
   <body>
-    <%- include('./layout/headerLoggedIn'); -%>
-
+    <div class="" id="top"></div>
+    <%- include('./layout/headerLoggedInNoFixed'); -%>
     <main>
-        <div class="container py-16 mb-48 pt-72" id="top">
-            <!-- process bar -->
-            <div class="mt-24 d-flex justify-content-end">
-                <div class="progressBar mt-16 mb-8 px-12">
-                    <div class="position-relative m-4">
-                        <div class="progress" style="height: 2px;">
-                            <div class="progress-bar bg-main-tint01" role="progressbar" style="width: 80%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <div class="p-num position-absolute top-0 start-0 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
-                            <span class="d-block">1</span>
-                        </div>
-                        <div class="p-num position-absolute top-0 start-20 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
-                            <span class="d-block">2</span>
-                        </div>
-                        <div class="p-num position-absolute top-0 start-40 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
-                            <span class="d-block">3</span>
-                        </div>
-                        <div class="p-num position-absolute top-0 start-60 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
-                            <span class="d-block">4</span>
-                        </div>
-                        <div class="p-num position-absolute top-0 start-80 translate-middle btn btn-sm btn-outline-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
-                            <span class="d-block">5</span>
-                        </div>
-                        <div class="p-num position-absolute top-0 start-100 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center">
-                            <span class="d-block">6</span>
+        <div class="sticky-top pb-8 bg-white">
+            <div class="container">
+                <!-- process bar -->
+                <div class="d-flex mb-20 pt-20 justify-content-center justify-content-sm-end">
+                    <div class="progressBar mb-8 px-12">
+                        <div class="position-relative m-4">
+                            <div class="progress bg-gray-300" style="height: 2px;">
+                                <div class="progress-bar bg-main-tint01" role="progressbar" style="width: 80%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                            <div class="p-num position-absolute top-0 start-0 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
+                                <span class="d-block">1</span>
+                            </div>
+                            <div class="p-num position-absolute top-0 start-20 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
+                                <span class="d-block">2</span>
+                            </div>
+                            <div class="p-num position-absolute top-0 start-40 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
+                                <span class="d-block">3</span>
+                            </div>
+                            <div class="p-num position-absolute top-0 start-60 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
+                                <span class="d-block">4</span>
+                            </div>
+                            <div class="p-num position-absolute top-0 start-80 translate-middle btn btn-sm btn-outline-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
+                                <span class="d-block">5</span>
+                            </div>
+                            <div class="p-num position-absolute top-0 start-100 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center">
+                                <span class="d-block">6</span>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-
-            <!-- title bar -->
-            <div class="titleBar d-lg-flex justify-content-between align-items-center">
-                <h2>我的情緒強度｜第二次</h2>
-                <div class="nav-btn d-lg-flex justify-content-end">
-                    <a class="btn btn-outline-main c-btn" href="findEmoAction.html">上一步</a>
-                    <a class="ms-16 btn btn-main c-btn d-flex justify-content-center align-items-center" href="findEmoThanks.html"><span class="ms-4">下一步</span></a>
+    
+                <!-- title bar -->
+                <div class="pb-8 px-12 px-sm-0 border-2 border-bottom border-main-tint02 d-flex justify-content-between align-items-center">
+                    <h2 class="fs-3 d-none d-md-block">我的情緒強度｜第二次</h2>
+                    <h2 class="fs-3 d-md-none d-flex flex-column">
+                        <span class="d-block">我的情緒強度</span>
+                        <span>第二次</span>
+                    </h2>
+                    <div class="nav-btn d-flex justify-content-end">
+                        <a class="btn btn-outline-main c-btn text-nowrap d-flex justify-content-center align-items-center" href="findEmoAction.html">上一步</a>
+            <form action="#" method="post">
+                        <button type="submit" class="ms-16 btn btn-main c-btn text-nowrap d-flex justify-content-center align-items-center" id="btnSave"><span class="ms-4">儲存紀錄</span></button>
+                    </div>
                 </div>
             </div>
-
-            <p class="mb-4 text-gray-550 fs-7">
-                親愛的ＯＯ，在靜下來覺察與記錄自己的情緒故事後，不知道你現在的情緒還好嗎？
-            </p>
-            <p  class="mb-40 text-main fs-7 fw-500">
-                邀請你再次深呼吸，並問問心中的自己，現在的情緒強度分別如何呢？<span class="text-gray-550 fs-8 fw-400">（ 1分代表最為微弱，5分代表最為強烈 ）</span>
-            </p>
+        </div>
+        <div class="container">
+            <ul  class="ms-4 mt-12 mb-36 px-12 px-sm-0 text-gray-550">
+                <li class="mb-4 text-gray-550 fs-7">
+                    親愛的ＯＯ，在靜下來覺察與記錄自己的情緒故事後，不知道你現在的情緒還好嗎？
+                </li>
+                <li class="mb-40 text-main fs-7 fw-500">
+                    邀請你再次深呼吸，並問問心中的自己，現在的情緒強度分別如何呢？<span class="text-gray-550 fs-8 fw-400">（ 1分代表最為微弱，5分代表最為強烈 ）</span>
+                </li>
+            </ul>
 
             <!-- 尚未設定form action內容 -->
             <form action="#" method="">
                 <!-- 1 card & point -->
-                <div class="mb-24 d-flex justify-content-between">
+                <div class="mb-40 d-flex flex-column flex-md-row justify-content-md-between align-items-center">
                     <!-- card -->
-                    <button type="button" class="class-card me-16 bg-expectation link-gray-900 class-card-expectation" data-bs-toggle="modal" data-bs-target="#expectation01">
+                    <button type="button" class="class-card mb-md-0 bg-expectation link-gray-900 class-card-expectation" data-bs-toggle="modal" data-bs-target="#expectation01">
                         <p>期&nbsp;待</p>
                         <div class="img-box">
                             <img src="https://wavemocards.com/frontend/upload/02-expectation/expaction01-expect.svg" alt="期待">
@@ -75,41 +85,41 @@
                     <!-- point -->
                     <div class="box-strength d-flex justify-content-between align-items-center">
                         <div>
-                            <input type="radio" class="d-none" name="emoStrength2nd01" id="2ndEmo01Point01" value="1">
-                            <label for="2ndEmo01Point01" class="form-label text-strength ">
+                            <input type="radio" class="d-none" name="emoStrength1st01" id="1stEmo01Point01" value="1">
+                            <label for="1stEmo01Point01" class="form-label text-strength ">
                                 1
                             </label>
                         </div>
                         <div>
-                            <input type="radio" class="d-none" name="emoStrength2nd01" id="2ndEmo01Point02" value="2">
-                            <label for="2ndEmo01Point02" class="form-label text-strength ">
+                            <input type="radio" class="d-none" name="emoStrength1st01" id="1stEmo01Point02" value="2">
+                            <label for="1stEmo01Point02" class="form-label text-strength ">
                                 2
                             </label>
                         </div>
                         <div>
-                            <input type="radio" class="d-none" name="emoStrength2nd01" id="2ndEmo01Point03" value="3">
-                            <label for="2ndEmo01Point03" class="form-label text-strength ">
+                            <input type="radio" class="d-none" name="emoStrength1st01" id="1stEmo01Point03" value="3">
+                            <label for="1stEmo01Point03" class="form-label text-strength ">
                                 3
                             </label>
                         </div>
                         <div>
-                            <input type="radio" class="d-none" name="emoStrength2nd01" id="2ndEmo01Point04" value="4">
-                            <label for="2ndEmo01Point04" class="form-label text-strength ">
+                            <input type="radio" class="d-none" name="emoStrength1st01" id="1stEmo01Point04" value="4">
+                            <label for="1stEmo01Point04" class="form-label text-strength ">
                                 4
                             </label>
                         </div>
                         <div>
-                            <input type="radio" class="d-none" name="emoStrength2nd01" id="2ndEmo01Point05" value="5">
-                            <label for="2ndEmo01Point05" class="form-label text-strength ">
+                            <input type="radio" class="d-none" name="emoStrength1st01" id="1stEmo01Point05" value="5">
+                            <label for="1stEmo01Point05" class="form-label text-strength ">
                                 5
                             </label>
                         </div>
                     </div>
                 </div>
                 <!-- 2 card & point -->
-                <div class="mb-24 d-flex justify-content-between">
+                <div class="mb-40 d-flex flex-column flex-md-row justify-content-md-between align-items-center">
                     <!-- card -->
-                    <button type="button" class="class-card me-16 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#happy05">
+                    <button type="button" class="class-card mb-md-0 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#happy05">
                         <p>興&nbsp;奮</p>
                         <div class="img-box">
                             <img src="https://wavemocards.com/frontend/upload/01-happy/happy05-excited.svg" alt="興奮">
@@ -118,41 +128,41 @@
                     <!-- point -->
                     <div class="box-strength d-flex justify-content-between align-items-center">
                         <div>
-                            <input type="radio" class="d-none" name="emoStrength2nd02" id="2ndEmo02Point01" value="1">
-                            <label for="2ndEmo02Point01" class="form-label text-strength ">
+                            <input type="radio" class="d-none" name="emoStrength1st02" id="1stEmo02Point01" value="1">
+                            <label for="1stEmo02Point01" class="form-label text-strength ">
                                 1
                             </label>
                         </div>
                         <div>
-                            <input type="radio" class="d-none" name="emoStrength2nd02" id="2ndEmo02Point02" value="2">
-                            <label for="2ndEmo02Point02" class="form-label text-strength ">
+                            <input type="radio" class="d-none" name="emoStrength1st02" id="1stEmo02Point02" value="2">
+                            <label for="1stEmo02Point02" class="form-label text-strength ">
                                 2
                             </label>
                         </div>
                         <div>
-                            <input type="radio" class="d-none" name="emoStrength2nd02" id="2ndEmo02Point03" value="3">
-                            <label for="2ndEmo02Point03" class="form-label text-strength ">
+                            <input type="radio" class="d-none" name="emoStrength1st02" id="1stEmo02Point03" value="3">
+                            <label for="1stEmo02Point03" class="form-label text-strength ">
                                 3
                             </label>
                         </div>
                         <div>
-                            <input type="radio" class="d-none" name="emoStrength2nd02" id="2ndEmo02Point04" value="4">
-                            <label for="2ndEmo02Point04" class="form-label text-strength ">
+                            <input type="radio" class="d-none" name="emoStrength1st02" id="1stEmo02Point04" value="4">
+                            <label for="1stEmo02Point04" class="form-label text-strength ">
                                 4
                             </label>
                         </div>
                         <div>
-                            <input type="radio" class="d-none" name="emoStrength2nd02" id="2ndEmo02Point05" value="5">
-                            <label for="2ndEmo02Point05" class="form-label text-strength ">
+                            <input type="radio" class="d-none" name="emoStrength1st02" id="1stEmo02Point05" value="5">
+                            <label for="1stEmo02Point05" class="form-label text-strength ">
                                 5
                             </label>
                         </div>
                     </div>
                 </div>
                 <!-- 3 card & point -->
-                <div class="mb-24 d-flex justify-content-between">
+                <div class="mb-72 d-flex flex-column flex-md-row justify-content-md-between align-items-center">
                     <!-- card -->
-                    <button type="button" class="class-card me-16 bg-unstable link-gray-900 class-card-unstable" data-bs-toggle="modal" data-bs-target="#unstable02">
+                    <button type="button" class="class-card mb-md-0 bg-unstable link-gray-900 class-card-unstable" data-bs-toggle="modal" data-bs-target="#unstable02">
                         <p>擔&nbsp;心</p>
                         <div class="img-box">
                             <img src="https://wavemocards.com/frontend/upload/04-unstable/unstable02-worry.svg" alt="擔心">
@@ -161,32 +171,32 @@
                     <!-- point -->
                     <div class="box-strength d-flex justify-content-between align-items-center">
                         <div>
-                            <input type="radio" class="d-none" name="emoStrength2nd03" id="2ndEmo03Point01" value="1">
-                            <label for="2ndEmo03Point01" class="form-label text-strength ">
+                            <input type="radio" class="d-none" name="emoStrength1st03" id="1stEmo03Point01" value="1">
+                            <label for="1stEmo03Point01" class="form-label text-strength ">
                                 1
                             </label>
                         </div>
                         <div>
-                            <input type="radio" class="d-none" name="emoStrength2nd03" id="2ndEmo03Point02" value="2">
-                            <label for="2ndEmo03Point02" class="form-label text-strength ">
+                            <input type="radio" class="d-none" name="emoStrength1st03" id="1stEmo03Point02" value="2">
+                            <label for="1stEmo03Point02" class="form-label text-strength ">
                                 2
                             </label>
                         </div>
                         <div>
-                            <input type="radio" class="d-none" name="emoStrength2nd03" id="2ndEmo03Point03" value="3">
-                            <label for="2ndEmo03Point03" class="form-label text-strength ">
+                            <input type="radio" class="d-none" name="emoStrength1st03" id="1stEmo03Point03" value="3">
+                            <label for="1stEmo03Point03" class="form-label text-strength ">
                                 3
                             </label>
                         </div>
                         <div>
-                            <input type="radio" class="d-none" name="emoStrength2nd03" id="2ndEmo03Point04" value="4">
-                            <label for="2ndEmo03Point04" class="form-label text-strength ">
+                            <input type="radio" class="d-none" name="emoStrength1st03" id="1stEmo03Point04" value="4">
+                            <label for="1stEmo03Point04" class="form-label text-strength ">
                                 4
                             </label>
                         </div>
                         <div>
-                            <input type="radio" class="d-none" name="emoStrength2nd03" id="2ndEmo03Point05" value="5">
-                            <label for="2ndEmo03Point05" class="form-label text-strength ">
+                            <input type="radio" class="d-none" name="emoStrength1st03" id="1stEmo03Point05" value="5">
+                            <label for="1stEmo03Point05" class="form-label text-strength ">
                                 5
                             </label>
                         </div>
@@ -202,5 +212,13 @@
     <%- include('./layout/modalEmoCards'); -%>
 
     <%- include('./layout/baseJs'); -%>
+    <script>
+        const btnSave = document.querySelector('#btnSave');
+
+        btnSave.addEventListener('click', function(){
+            event.preventDefault();  // 之後要將這個刪除，之後的流程「出現儲存成功/失敗的訊息框，並在點擊確認後連結到下一頁」
+            location.href="./findEmoThanks.html";
+        })
+    </script>
   </body>
 </html>
