--- a/pages/myEmoCardsHolder.html
+++ b/pages/myEmoCardsHolder.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <!-- 手機版網頁 CSS Reset 螢幕解析度 Reset -->
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-    <title>浪潮情緒卡｜找尋我的情緒｜我的情緒卡夾</title>
-    <!-- Bootstrap icon -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <!-- Bootstrap css -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-  </head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <!-- 手機版網頁 CSS Reset 螢幕解析度 Reset -->
+        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+        <title>浪潮情緒卡｜找尋我的情緒｜我的情緒卡夾</title>
+        <!-- Bootstrap icon -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+        <!-- Bootstrap css -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    </head>
     <body>
         <div class="" id="top"></div>
         <%- include('./layout/headerLoggedInNoFixed'); -%>
@@ -19,7 +19,7 @@
             <div class="sticky-top pb-8 bg-white">
                 <div class="container">
                     <!-- process bar -->
-                    <div class="d-flex mb-20 pt-20 justify-content-end">
+                    <div class="d-flex mb-20 pt-20 justify-content-center justify-content-sm-end">
                         <div class="progressBar mb-8 px-12">
                             <div class="position-relative m-4">
                                 <div class="progress bg-gray-300" style="height: 2px;">
@@ -48,7 +48,7 @@
                     </div>
     
                     <!-- title bar -->
-                    <div class="pb-8 border-2 border-bottom border-main-tint02 d-flex justify-content-between align-items-center">
+                    <div class="pb-8 px-12 px-sm-0 border-2 border-bottom border-main-tint02 d-flex justify-content-between align-items-center">
                         <h2 class="fs-3">我的情緒卡夾</h2>
                         <div class="nav-btn d-flex justify-content-end">
                             <a class="btn btn-outline-main c-btn text-nowrap d-flex justify-content-center align-items-center" href="findEmoClassified.html">
@@ -64,8 +64,8 @@
             </div>
             
             <div class="container">
-                <ul  class="ms-4 mt-12 mb-36 text-gray-550">
-                    <li>🔎 請 <span class="text-main fw-bold">留下</span> 最符合您現在狀態的情緒卡「 <span class="fs-6 fw-bold text-main">3</span> 張」。</li>
+                <ul  class="ms-4 mt-12 mb-36 px-12 px-sm-0 text-gray-550 fs-7">
+                    <li class="mb-4">🔎 請 <span class="text-main fw-bold">留下</span> 最符合您現在狀態的情緒卡「 <span class="fs-6 fw-bold text-main">3</span> 張」。</li>
                     <li>🔎 您可以透過點擊 <span class="fs-6 text-pink-tint01"><i class="bi bi-x-circle-fill"></i></span>，將情緒卡移除。</li>
                 </ul>
 
