--- a/emoCardsHate.html
+++ b/emoCardsHate.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <script type="module" crossorigin src="/wavemocards/assets/main-4f45402c.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-304f2ee8.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-f3e21832.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-8b2778b9.css">
   </head>
   <body>
     <header class="header h-logined fixed-top">
@@ -80,7 +80,7 @@
     <main>
       <div class="container py-16 pt-112" id="top">
         <!-- 標題 -->
-          <div class="mb-16 pb-8 border-2 border-bottom border-main-tint02 d-flex justify-content-between align-items-end">
+          <div class="mb-16 pb-8 border-2 border-bottom border-main-tint02 d-flex justify-content-between align-items-center">
             <h2 class="fs-3">討厭</h2>
           <div class="nav-btn d-flex justify-content-end">
               <a class="btn btn-outline-main c-btn" href="emoCardsClassified.html">返回</a>
