--- a/account.html
+++ b/account.html
@@ -10,8 +10,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
         <!-- Bootstrap css -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-      <script type="module" crossorigin src="/wavemocards/assets/main-4f45402c.js"></script>
-      <link rel="stylesheet" href="/wavemocards/assets/main-304f2ee8.css">
+      <script type="module" crossorigin src="/wavemocards/assets/main-f3e21832.js"></script>
+      <link rel="stylesheet" href="/wavemocards/assets/main-8b2778b9.css">
     </head>
     <body>
         <header class="header h-logined fixed-top">
@@ -80,7 +80,7 @@
         <main>
             <div class="container py-16 mb-48 pt-72" id="top">
                 <!-- title bar -->
-                <div class="mb-36 pt-32 pb-8 d-flex justify-content-between align-items-end border-2 border-bottom border-main-tint02">
+                <div class="mb-36 pt-32 pb-8 d-flex justify-content-between align-items-center border-2 border-bottom border-main-tint02">
                     <h2 class="fs-3">我的帳戶</h2>
                     <form action="" method="">
                     <div class="nav-btn d-flex justify-content-end">
