--- a/signUp.html
+++ b/signUp.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <script type="module" crossorigin src="/wavemocards/assets/main-4f45402c.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-304f2ee8.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-f3e21832.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-8b2778b9.css">
   </head>
   <body>
     <header class="header sticky-top">
@@ -120,6 +120,7 @@
                             <span class="text-pink-tint02 fs-9">*必填</span>
                         </label>
                         <input type="password" class="form-control rounded-pill px-20" id="pwd2" placeholder="請再次輸入您所欲設定的密碼" required>
+                        <!-- 雙重密碼驗證結果 -->
                         <div class="mt-4 ms-24 fs-9" id="pwd2Cmt"></div>
                     </div>
                     <div class="mb-20">
@@ -208,7 +209,17 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <p>非常歡迎您光臨「浪潮情緒卡網站」（以下簡稱本網站），為了讓您能夠安心的使用本網站的各項服務與資訊，特此向您說明本網站的隱私權保護政策，以保障您的權益，請您詳閱下列內容：</p>
+                <p>
+                    歡迎來到「浪潮情緒卡網站」（以下簡稱本網站）。
+                </p>
+                <br>
+                <p>
+                    我們重視您的隱私和數據安全。本隱私政策概述了我們如何處理您的個人數據以及您對其使用擁有的權利。若您註冊使用我們的網站即表示您同意本政策中描述的做法。
+                </p>
+                <br>
+                <p>
+                    為了讓您能夠安心的使用本網站的各項服務與資訊，特此向您說明本網站的隱私權保護政策，以保障您的權益，請您詳閱下列內容：
+                </p>
                 <br>
                 <ol class="mx-16" style="list-style-type: cjk-ideographic;">
                     <li class="mx-16">
@@ -247,6 +258,13 @@
                                 如因業務需要有必要委託其他單位提供服務時，本網站亦會嚴格要求其遵守保密義務，並且採取必要檢查程序以確定其將確實遵守。
                             </li>
                         </ul>
+                    </li>
+                    <br>
+                    <li class="mx-16">
+                        <span class="fw-bold">數據安全</span>
+                        <p>
+                            本網站對使用者密碼進行加密，以確保使用者密碼安全。
+                        </p>
                     </li>
                     <br>
                     <li class="mx-16">
@@ -297,6 +315,16 @@
                         <p>本網站隱私權保護政策將因應需求隨時進行修正，修正後的條款將刊登於網站上。</p>
                     </li>
                 </ol>
+                <br>
+                <ul>
+                    <li>
+                        <span class="fw-bold fs-7">📮 聯絡我們</span>
+                        <p class="mx-24">
+                            若有任何隱私權政策相關問題，請Email至
+                            <a href="mailto:info@wavemocards.com">info@wavemocards.com</a>
+                        </p>
+                    </li>
+                </ul>
             </div>
             <div class="modal-footer">
             <button type="button" class="btn btn-main link-white" data-bs-dismiss="modal">我瞭解了</button>
